--- a/index.html
+++ b/index.html
@@ -160,13 +160,20 @@
             <form action="https://formcarry.com/s/JKNu0aGkeQ" method="POST" class="formcarry-form">
                 <input name="name" type="text" placeholder="Name" required />
                 <input name="email" type="email" placeholder="Email" required /><br>
-                <textarea name="message" placeholder="Why are you interested in Stanford?" required rows="5"></textarea><br>
+                <textarea 
+                  name="message" 
+                  placeholder="Why are you interested in Stanford?" 
+                  required 
+                  rows="1" 
+                  oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px';"
+                  style="overflow:hidden; resize:none; width:100%; box-sizing:border-box;">
+                </textarea><br>
                 <button class="btn_one">Submit</button>
             </form>
             </p>
 
             <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"
-                href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a></td> 
+                href="https://calendar.google.com/"><i class="fab fa-calendar"></i></a></td> 
         </section>
     </div>
     <div id="footer">
