--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
                   required
                   rows="1"
                   oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px';"
-                  style="overflow:hidden; resize:none; width:100%; box-sizing:border-box;">
-                </textarea><br>
+                  style="overflow:hidden; resize:none; width:100%; box-sizing:border-box;"></textarea><br>
                 <button class="btn_one">Submit</button>
             </form>
             </p>
