--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </p>
 
             <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"
-                href="https://calendar.google.com/"><i class="fab fa-calendar"></i></a></td> 
+                href="https://calendar.google.com/"><i class="fas fa-calendar"></i></a></td> 
         </section>
     </div>
     <div id="footer">
