--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <a id="moreinfo" onclick="showmoreinfo()" class="animated fadeIn" style="animation-delay: 1000ms;">LEARN MORE</a>
     <div id="middle" class="animated slideInDown" style="animation-delay: 2000ms;">
         <h1>Stanford University</h1>
-        <h2>Mission Defined by Possibility</h2>
+        <h2>A Mission Defined by Possibility</h2>
         <div id="menu">
             <a onclick="showabout()">ABOUT</a>
             <a onclick="showadmissions()">ADMISSIONS</a>
