--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
         <div class="scroll-up-indicator"><i class="fas fa-chevron-up"></i></div>
       </div>
     </div>
-
+    <style>
+        
     <div id="about_container" class="container">
         <div onclick="closeabout()"><i class="fas fa-angle-left"></i></div>
         <h1>About</h1>
